[package]
name = "solana-bpf-loader-program"
version = "1.8.14"
description = "Solana BPF loader"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-bpf-loader-program"
edition = "2018"

[dependencies]
bincode = "1.3.1"
byteorder = "1.3.4"
log = "0.4.11"
num-derive = "0.3"
num-traits = "0.2"
rand_core = "0.6.2"
libsecp256k1 = "0.5.0"
sha3 = "0.9.1"
solana-program = "=1.8.14"
solana-measure = "=1.8.14"
solana-metrics = "=1.8.14"
solana-runtime = "=1.8.14"
solana-sdk = "=1.8.14"
solana_rbpf = { git = "https://github.com/jawilk/rbpf", branch = "debug_support" }
thiserror = "1.0"
programs-to-debug-thread-local = { git = "https://github.com/jawilk/programs-to-debug-thread-local" }

[dev-dependencies]
curve25519-dalek = "3.0.0"
rand = "0.7.3"
rustversion = "1.0.4"

[lib]
crate-type = ["lib"]
name = "solana_bpf_loader_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
